2010-02-24  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by nobody, build fix.

        [Qt] Corrects build break of QtLauncher on Windows.
        The VERSION variable was not set anymore while building in trunk.

        * WebCore.pro:

2010-02-24  Alexander Pavlov  <apavlov@chromium.org>

        Reviewed by Pavel Feldman.

        Web Inspector: Activate/Deactivate breaks does not look consistent with rest of the toolbar.

        Fix style and add the new images to the related file sets.
        https://bugs.webkit.org/show_bug.cgi?id=35307

        * WebCore.gypi:
        * inspector/front-end/Images/deactivateBreakpointsButtonGlyph.png:
        * inspector/front-end/Images/deactivateBreakpointsDisabledButtonGlyph.png:
        * inspector/front-end/WebKit.qrc:
        * inspector/front-end/inspector.css:

2010-02-24  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Get rid of an extra call to
        setNPWindowIfNeeded. updatePluginWidget already calls this for us
        if needed.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::platformStart):

2010-02-24  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Try to sanitize a bit the geometry management of plugins.

        Stop doing contradictory things in updatePluginWidget (we were at
        the same time pretending the geometry setting was delayed until
        ::paint and setting the geometry not once but twice) and just set
        it any time the windowRect or clipRect for the plugin has changed.

        This is closer to what the Mac port does, and fixes instances of
        the plugins not being drawn until the window is resized or
        scrolled. Other than that all manual and layout tests seems to
        still work.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::PluginView::updatePluginWidget):
        (WebCore::PluginView::setNPWindowIfNeeded):
